corrected spellings mistake

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h4>SUMMARY OF QUALIFICATION</h4>
         <p>Dedicated and efficient full stack developer with 1yr experience in 
-           programming,and 6mnths experience in Android Development. Seeking to further 
+           programming,and 6months experience in Android Development. Seeking to further 
            improve HTML5 and CSS3 skills as the future full stack developer.</p> 
            
         <h4> WORK EXPERIENCE</h4>
@@ -54,7 +54,7 @@
         <p> ● Attending shows and exhibitions</p>
             
 
-        <h4>REFREE</H4>
+        <h4>REFERENCE</H4>
         <h6>SAM TOMASHI</h6>
         <p>Software Developer | Technical mentor</p>
         <p>linkedin.com/in/samtomashi/</p>
