--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
             <p>August2020–January 2021
                intern at ErrandGuy</p>
         <h6>Key Qualifications & Responsibilities</h6>
-            <p>● Developed full-stack web applications which processed, analyzed, and 
-                rendered data visually.</p>
-            <p>● worked as a team learder in team of back and front end developers.</p>
-            <p>● Developed Android applications which had functionality of analyzing 
-                and rendering data.</p>
+        <ul>
+            <li>Developed full-stack web applications which processed, analyzed, and 
+                rendered data visually.</li>
+            <li> worked as a team learder in team of back and front end developers.</li>
+            <li> Developed Android applications which had functionality of analyzing 
+                and rendering data.</li>
+        </ul>
 
         <h4>EDUCATION</h4>
         <h6>certified software development</h6>
@@ -44,14 +46,18 @@
 
 
         <h4>SKILLS</h4>
-        <p>●HTML/CSS JavaScript,python,Django</p>
-        <p>●Bootstrap,Angular JS,Flask,Php</p>
-        <p>●Android and iOS App development</p>
-        <p>●SQL Databases</p>
-        
+        <ul>
+          <li>HTML/CSS JavaScript,python,Django</li>
+          <li>Bootstrap,Angular JS,Flask,Php</li>
+          <li>Android and iOS App development</li>
+          <li>SQL Databases</li>
+        </ul>
+
         <h3>INTEREST</h3>
-        <p>● Volunteering on community work</p>
-        <p> ● Attending shows and exhibitions</p>
+        <ul>
+          <li>Volunteering on community work</li>
+          <li>Attending shows and exhibitions</li>
+        </ul>
             
 
         <h4>REFERENCE</H4>
